[package]
name = "clickup-tui"
version = "0.1.0"
edition = "2021"
description = "A TUI for organizing ClickUp tasks with personal workflow overlay"
authors = ["Randall Miller"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
open = "5"
thiserror = "2"
anyhow = "1"
arboard = "3"
